# firebird-dataexpo

./: app.py  pyproject.toml
.streamlit/: config.toml
Assignment2/: Data_Exploration_Techniques.ipynb
