[tool.poetry]
name = "streamlit-data-exploration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
